changed getReplicas to getDataObject
